--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,9 +4,9 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
-axum = "0.7"
+axum = { version = "0.7", features = ["multipart"] }
 tokio = { version = "1", features = ["full"] }
-tower-http = { version = "0.5", features = ["fs", "limit", "trace", "cors", "compression", "timeout", "add-extension", "catch-panic"] }
+tower-http = { version = "0.5", features = ["fs", "limit", "trace", "cors", "timeout", "add-extension", "catch-panic"] }
 hyper = "1"
 serde = { version = "1", features = ["derive"] }
 tokio-util = { version = "0.7", features = ["io"] }
