--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,8 +7,8 @@ edition = "2021"
 axum = { version = "0.7", features = ["multipart"] }
 tokio = { version = "1", features = ["full"] }
 tower-http = { version = "0.5", features = ["fs", "limit", "trace", "cors", "timeout", "add-extension", "catch-panic"] }
-hyper = "1"
+hyper = { version = "0.14", default-features = true, features = ["server"] }
 serde = { version = "1", features = ["derive"] }
 tokio-util = { version = "0.7", features = ["io"] }
 bytes = "1"
-async-trait = "0.1"
+async-trait = "0.1" 
