--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,3 +12,4 @@ serde = { version = "1", features = ["derive"] }
 tokio-util = { version = "0.7", features = ["io"] }
 bytes = "1"
 async-trait = "0.1" 
+tera = "1.0"
